--- a/cjzs/android/app/src/main/res/layout/refresh_webview.xml
+++ b/cjzs/android/app/src/main/res/layout/refresh_webview.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="网页由m.baidu.com提供\n由WebView提供技术支持"
+        android:text="本软件由yapovich提供技术支持"
         android:paddingTop="16dp"
         android:textColor="@color/material_grey_300"
         android:gravity="center"
