--- a/cjzs/android/app/src/main/res/layout/activity_capture_result.xml
+++ b/cjzs/android/app/src/main/res/layout/activity_capture_result.xml
@@ -1,12 +1,19 @@
-<com.yapovich.cjzs.components.materialrefresh.MaterialRefreshLayout
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+  <com.yapovich.cjzs.components.materialrefresh.MaterialRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-            <WebView
+            <com.tencent.smtt.sdk.WebView
                 android:id="@+id/capture_webview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></WebView>
-</com.yapovich.cjzs.components.materialrefresh.MaterialRefreshLayout>
+                android:layout_height="match_parent">
+            </com.tencent.smtt.sdk.WebView>
+  </com.yapovich.cjzs.components.materialrefresh.MaterialRefreshLayout>
+</LinearLayout>
