--- a/cjzs/android/app/src/main/res/layout/refresh_webview.xml
+++ b/cjzs/android/app/src/main/res/layout/refresh_webview.xml
@@ -2,13 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     >
+    <TextView
+        android:id="@+id/urlFromTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="yapovich"
+        android:paddingTop="16dp"
+        android:textColor="@color/material_grey_600"
+        android:gravity="center"
+        android:layout_gravity="center"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="本软件由yapovich提供技术支持"
-        android:paddingTop="16dp"
-        android:textColor="@color/material_grey_300"
+        android:text="QQ浏览器X5内核提供技术支持"
+        android:paddingTop="10dp"
+        android:textColor="@color/material_grey_600"
+        android:gravity="center"
+        android:layout_gravity="center"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="by yapovich"
+        android:paddingTop="10dp"
+        android:textColor="@color/material_grey_600"
         android:gravity="center"
         android:layout_gravity="center"
         />
