--- a/cjzs/android/app/src/main/res/layout/refresh_webview.xml
+++ b/cjzs/android/app/src/main/res/layout/refresh_webview.xml
@@ -8,7 +8,7 @@
         android:id="@+id/urlFromTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="yapovich"
+        android:text=""
         android:paddingTop="16dp"
         android:textColor="@color/material_grey_600"
         android:gravity="center"
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QQ浏览器X5内核提供技术支持"
+        android:text="X5内核提供技术支持"
         android:paddingTop="10dp"
         android:textColor="@color/material_grey_600"
         android:gravity="center"
