--- a/cjzs/android/app/src/main/res/layout/activity_capture_result.xml
+++ b/cjzs/android/app/src/main/res/layout/activity_capture_result.xml
@@ -1,11 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
   <com.yapovich.cjzs.components.materialrefresh.MaterialRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
